--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -26,6 +26,7 @@
                     <li>
                         <a href="https://github.com/{{ site.author.github_username }}" target="blank"><i class="fa fa-github"></i></a>
                     </li>
+<!--
                     <li>
                         <a href="https://www.facebook.com/{{ site.author.facebook_username }}" target="blank"><i class="fa fa-facebook"></i></a>
                     </li>
@@ -34,6 +35,10 @@
                     </li>
                     <li>
                         <a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fa fa-rss"></i></a>
+                    </li>
+-->                    
+                    <li>
+                        <a href="/" target="blank"><i class="fa fa-rss"></i></a>
                     </li>
                     {% if site.author.cv %}
                     <li>
